--- a/infra/pipeline.yaml
+++ b/infra/pipeline.yaml
@@ -229,6 +229,9 @@ Resources:
                   - 'cloudformation:UpdateStack'
                   - 'scheduler:GetSchedule'
                   - 'scheduler:CreateSchedule'
+                  - 'scheduler:DeleteSchedule'
+                  - 'scheduler:UpdateSchedule'
+                  - 'scheduler:ListSchedules'
                 Resource: '*' # Permissões amplas necessárias para o CFN gerenciar os recursos
 
   # Conexão com o GitHub via CodeStar Connections
