Fixing Lambda name

--- a/infra/processing.yaml
+++ b/infra/processing.yaml
@@ -474,7 +474,7 @@ Resources:
     Properties:
       InstanceProfileName: !Sub '${ProjectName}-SpotInstanceProfile'
       Roles:
-        - !Ref SpotInstanceRoleArn
+        - !Select [1, !Split ['/', !Ref SpotInstanceRoleArn]]  # Extrai o nome da role do ARN
 
   # =====================================================
   # ALIASES LAMBDA
