--- a/buildspec.yml
+++ b/buildspec.yml
@@ -1,5 +1,11 @@
 version: 0.2
 
+env:
+  variables:
+    # Gerar um timestamp único para forçar atualizações
+    BUILD_TIMESTAMP: $(date +%Y%m%d%H%M%S)
+    GIT_COMMIT: $(echo $CODEBUILD_RESOLVED_SOURCE_VERSION | cut -c 1-8)
+
 phases:
   install:
     runtime-versions:
@@ -12,6 +18,8 @@ phases:
   pre_build:
     commands:
       - echo "Pre-build phase started on `date`"
+      - echo "Build timestamp: ${BUILD_TIMESTAMP}"
+      - echo "Git commit: ${GIT_COMMIT}"
       - echo "Validating CloudFormation templates..."
       - aws cloudformation validate-template --template-body file://infra/main.yaml
       - aws cloudformation validate-template --template-body file://infra/iam.yaml
@@ -26,37 +34,43 @@ phases:
       # Criar diretório para códigos Lambda
       - mkdir -p lambda-code
       
-      # Empacotar cada função Lambda individualmente com todas as dependências necessárias
+      # Empacotar cada função Lambda individualmente
       - echo "Packaging data_downloader..."
-      - cd src && zip -r ../lambda-code/data_downloader.zip data_downloader.py config_service.py && cd ..
+      - cd src && zip -r ../lambda-code/data_downloader-${GIT_COMMIT}.zip data_downloader.py config_service.py && cd ..
       
       - echo "Packaging orchestrator..."
-      - cd src && zip -r ../lambda-code/orchestrator.zip orchestrator.py config_service.py && cd ..
+      - cd src && zip -r ../lambda-code/orchestrator-${GIT_COMMIT}.zip orchestrator.py config_service.py && cd ..
       
       - echo "Packaging launch_spot_validator..."
-      - cd src && zip -r ../lambda-code/launch_spot_validator.zip launch_spot_validator.py config_service.py && cd ..
+      - cd src && zip -r ../lambda-code/launch_spot_validator-${GIT_COMMIT}.zip launch_spot_validator.py config_service.py && cd ..
       
       - echo "Packaging initiate_validation_window..."
-      - cd src && zip -r ../lambda-code/initiate_validation_window.zip initiate_validation_window.py config_service.py && cd ..
+      - cd src && zip -r ../lambda-code/initiate_validation_window-${GIT_COMMIT}.zip initiate_validation_window.py config_service.py && cd ..
       
       - echo "Packaging model_retrainer..."
-      - cd src && zip -r ../lambda-code/model_retrainer.zip model_retrainer.py config_service.py model_validator.py && cd ..
+      - cd src && zip -r ../lambda-code/model_retrainer-${GIT_COMMIT}.zip model_retrainer.py config_service.py model_validator.py && cd ..
       
       - echo "Packaging config_service..."
-      - cd src && zip -r ../lambda-code/config_service.zip config_service.py && cd ..
+      - cd src && zip -r ../lambda-code/config_service-${GIT_COMMIT}.zip config_service.py && cd ..
       
-      # Adicionar módulos de processamento às lambdas que precisam deles
+      # Adicionar módulos de processamento
       - echo "Adding processing modules to required lambdas..."
-      - cd src && zip -r ../lambda-code/model_retrainer.zip data_processor.py data_validator.py feature_engineering.py model_trainer.py monte_carlo_validator.py performance_monitor.py risk_monitor.py shap_analyzer.py strategy_evaluator.py walk_forward_validator.py && cd ..
-      - cd src && zip -r ../lambda-code/orchestrator.zip data_processor.py data_validator.py feature_engineering.py && cd ..
+      - cd src && zip -r ../lambda-code/model_retrainer-${GIT_COMMIT}.zip data_processor.py data_validator.py feature_engineering.py model_trainer.py monte_carlo_validator.py performance_monitor.py risk_monitor.py shap_analyzer.py strategy_evaluator.py walk_forward_validator.py && cd ..
+      - cd src && zip -r ../lambda-code/orchestrator-${GIT_COMMIT}.zip data_processor.py data_validator.py feature_engineering.py && cd ..
       
       # Upload dos códigos Lambda para S3
       - echo "Uploading Lambda code packages to S3..."
       - aws s3 cp lambda-code/ s3://${ARTIFACTS_BUCKET}/lambda-code/ --recursive
       
-      # Empacotar user_data.sh para instâncias EC2
-      - echo "Uploading user_data.sh to S3..."
-      - aws s3 cp user_data.sh s3://${ARTIFACTS_BUCKET}/ec2-scripts/user_data.sh
+      # Criar arquivo de parâmetros para o CloudFormation
+      - echo "Creating parameters file..."
+      - cat > parameters.json << EOF
+      [
+        {"ParameterKey": "ProjectName", "ParameterValue": "CryptoTradingSystem"},
+        {"ParameterKey": "ArtifactsBucket", "ParameterValue": "${ARTIFACTS_BUCKET}"},
+        {"ParameterKey": "CodeVersion", "ParameterValue": "${GIT_COMMIT}"}
+      ]
+      EOF
       
       # Empacotar templates CloudFormation
       - echo "Packaging CloudFormation templates..."
@@ -74,6 +88,7 @@ phases:
 artifacts:
   files:
     - packaged-*.yaml
+    - parameters.json
     - config.json
     - setup_parameters.py
   name: CryptoTradingSystemArtifacts
