--- a/buildspec.yml
+++ b/buildspec.yml
@@ -49,7 +49,8 @@ phases:
       - echo "Uploading Lambda code packages to S3..."
       - aws s3 cp lambda-code/ s3://${ARTIFACTS_BUCKET}/lambda-code/ --recursive
       - echo "Creating parameters file..."
-      - cat > parameters.json << EOF
+      - |
+        cat > parameters.json << EOF
         [
           {"ParameterKey": "ProjectName", "ParameterValue": "CryptoTradingSystem"},
           {"ParameterKey": "ArtifactsBucket", "ParameterValue": "${ARTIFACTS_BUCKET}"},
